--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -3,16 +3,28 @@ title: storybook-addon-mock-urql
 description: Test urql graphql queries in storybook.
 template: splash
 hero:
+  title: |
+    Welcome to
+    <span
+      class="font-black text-transparent
+        bg-clip-text bg-gradient-to-b
+        from-accent-700 to-accent-400
+        dark:from-accent-500 dark:to-accent-200"
+    >
+      storybook-addon-mock-urql
+    </span>
   tagline: Test urql graphql queries in storybook.
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Get Started
+    - text: Get started
       link: /guides/getting-started/
       icon: right-arrow
       variant: primary
+    - text: View on GitHub
+      link: https://github.com/Enalmada/storybook-addon-mock-urql
+      icon: external
 ---
-
 
 [//]: # (import { Card, CardGrid } from '@astrojs/starlight/components';)
 
